--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 NODE_ENV=dev
 PORT=3333
+
+# Docker
+DATABASE_URL="postgresql://user:password@localhost:port/db?schema=public"
+
+# JWT
+JWT_SECRET=
